e2e/tests/all/snapshots/code_rest_mobile.snap
---
source: e2e/src/suite.rs
description: code at mobile (rest)
expression: tree
---
code
  StaticText "é"
  StaticText "if"
  StaticText "x;"
  StaticText "if"
  StaticText "y"
group "Rust code"
  StaticText "Rust"
  button "Copy code"
    description "Rust code"
  status [atomic] [live=polite]
  code
    StaticText "let"
    StaticText "a ="
    StaticText "1"
    StaticText ";"
    StaticText "let"
    StaticText "b ="
    StaticText "2"
    StaticText ";"
code
  StaticText "é"
  StaticText "/* a /* b */ c */"
  StaticText "x"
code
  StaticText "let"
  StaticText "a ="
  StaticText "1"
  StaticText ";"
  StaticText
  StaticText "let"
  StaticText "b ="
  StaticText "2"
  StaticText ";"
group "Rust code"
  StaticText "Rust"
  button "Copy code"
    description "Rust code"
  status [atomic] [live=polite]
  code
    StaticText "fn"
    StaticText
    StaticText "greet"
    StaticText "() {"
    StaticText "Removed"
    StaticText
    StaticText "old"
    StaticText "();"
    StaticText "Added"
    StaticText
    StaticText "new"
    StaticText "();"
    StaticText "}"
group "Code"
  code
    StaticText "keep"
    StaticText "Removed"
    StaticText "old"
    StaticText "Added"
    StaticText "new"
group "The greeting, Rust code"
  StaticText "Rust"
  button "Copy code"
    description "The greeting, Rust code"
  status [atomic] [live=polite]
  region "Rust code"
    code
      StaticText "fn"
      StaticText
      StaticText "main"
      StaticText "() {"
      StaticText
      StaticText "let"
      StaticText "s ="
      StaticText ""a string long enough to scroll the block sideways""
      StaticText ";"
      StaticText "}"
group "Rust code"
  button "Copy code"
    description "Rust code"
  status [atomic] [live=polite]
  region "Rust code"
    code
      StaticText "let"
      StaticText "a ="
      StaticText "1"
      StaticText ";"
      StaticText "let"
      StaticText "b ="
      StaticText "2"
      StaticText ";"
      StaticText "let"
      StaticText "c ="
      StaticText "3"
      StaticText ";"
      StaticText "let"
      StaticText "d ="
      StaticText "4"
      StaticText ";"
group "Rust code"
  StaticText "Rust"
  code
    StaticText "let"
    StaticText "a ="
    StaticText "1"
    StaticText ";"
    StaticText "let"
    StaticText "b ="
    StaticText "2"
    StaticText ";"
paragraph
  StaticText "Add"
  code
    StaticText "#[derive(Options)]"
  StaticText "above it."
paragraph
  code
    StaticText "an_identifier_far_too_long_for_a_three_hundred_twenty_pixel_column"
