e2e/tests/all/snapshots/collapse_open_mobile.snap
---
source: e2e/src/suite.rs
description: collapse at mobile (open)
expression: tree
---
button "Shipping details"
  StaticText "Shipping details"
paragraph
  StaticText "Shipping is calculated at checkout."
