e2e/tests/all/snapshots/collapse_rest_desktop.snap
---
source: e2e/src/suite.rs
description: collapse at desktop (rest)
expression: tree
---
button "Shipping details"
  StaticText "Shipping details"
