e2e/tests/all/snapshots/collapse_rest_mobile.snap
---
source: e2e/src/suite.rs
description: collapse at mobile (rest)
expression: tree
---
button "Shipping details"
  StaticText "Shipping details"
