e2e/tests/all/snapshots/color_field_open_mobile.snap
---
source: e2e/src/suite.rs
description: color_field at mobile (open)
expression: tree
---
LabelText
  StaticText "Accent"
combobox "Accent" = #1c7ed6 [expanded] [haspopup=dialog]
  StaticText "#1c7ed6"
button "Pick a color from the screen"
status [atomic] [live=polite]
dialog "Choose color"
  slider "Saturation" = 87 [orientation=horizontal] [valuemax=100] [valuemin=0]
  slider "Hue" = 208 [orientation=horizontal] [valuemax=360] [valuemin=0]
  button "#fa5252" [pressed=false]
  button "#40c057" [pressed=false]
  button "#228be6" [pressed=false]
--> aria-controls [id="color-field-dialog"] (rendered above)
