e2e/tests/all/snapshots/color_picker-alpha_rest_desktop.snap
---
source: e2e/src/suite.rs
description: color_picker-alpha at desktop (rest)
expression: tree
---
slider "Saturation" = 87 [orientation=horizontal] [valuemax=100] [valuemin=0]
slider "Hue" = 208 [orientation=horizontal] [valuemax=360] [valuemin=0]
slider "Alpha" = 1 [orientation=horizontal] [valuemax=1] [valuemin=0]
paragraph
  StaticText "#1c7ed6"
